<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:weightSum="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_rectangle"
            android:padding="4dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Email"
                android:inputType="textEmailAddress"
                app:met_hideUnderline="true"
                app:met_baseColor="@color/gray"
                android:drawableStart="@drawable/acc_icon"
                android:drawableLeft="@drawable/acc_icon"
                android:drawablePadding="5dp"
                app:met_primaryColor="@color/gray"
                app:met_textColorHint="@color/gray_medium" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="0.25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_rectangle"
            android:padding="4dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Password"
                android:inputType="textPassword"
                app:met_hideUnderline="true"
                app:met_baseColor="@color/gray"
                android:drawableStart="@drawable/lock_icon"
                android:drawableLeft="@drawable/lock_icon"
                android:drawablePadding="5dp"
                app:met_primaryColor="@color/gray"
                app:met_textColorHint="@color/gray_medium" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_rectangle"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="0.25" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_rectangle"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>