<resources>
    <string name="app_name">Rendezvous</string>
    <string name="test">Touch Me!</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="explore">Explore</string>
    <string name="discover">Discover</string>
    <string name="friends">Friends</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="new_chat">New Chat</string>
    <string name="chats_title">Rendezvous</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="availability">Availability</string>
    <string name="interests">Interests</string>
    <string name="content_description_dismiss">DISMISS</string>
    <string name="content_description_super_like">SUPER LIKE</string>
    <string name="content_description_like">LIKE</string>
    <string name="location">Fisher\'s bedroom</string>
    <string name="activity">Earth</string>
    <string name="distance">3 km</string>
    <string name="save_on_meats">Save-On-Meats</string>
    <string name="add_members">Add Members</string>
    <string name="suggest">Suggest</string>
    <string name="suggest_subtitle">Here\'s what we think you\'ll like.</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="enter_your_new_group_s_name">Enter your new group\'s name</string>
    <string name="add">+</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="search_for_a_friend">Search for a friend</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="edit_availability">Edit Availability</string>
    <string name="and_here_s_what_we_think_you_ll_like">And here\'s what we think you\'ll like:</string>
    <string name="here_s_what_you_ve_bookmarked">Here\'s what you\'ve bookmarked:</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="connect">Connected</string>
    <string name="disconnect">Disconnected, Please check your internet connection</string>
    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>

    <string name="facebook_app_id">518353112052813</string>
    <string name="fb_login_protocol_scheme">fb518353112052813</string>


    <string name="edit_interests">Edit Interests</string>

</resources>
