...
        <Space
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/refresh"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button_round"
            android:contentDescription="@string/content_description_dismiss"
            android:elevation="4dp"
...
